[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.44"
cargo-manifest = "0.17.0"
jsonwebtoken = "9.3.0"
leaky-bucket = "1.1.2"
rand = "0.8.5"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
shuttle-actix-web = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.26.0"
uuid = "1.11.0"
toml = "0.5.11"
